# rust-task2

./: Cargo.toml  README.md  config.yaml
src/: main.rs
